--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Myblog is a prctice project created for learning of Nodejs and Express.
+Mind-blow is a prctice project created for learning of Nodejs and Express.
